added_kafka-configuration_and_kafka-events